@@ -1,5 +1,6 @@
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-account_management-0.6.0.3.ebuild 204 RMD160 82b2e5a7b3da807e6485f370e60e87977249d6e7 SHA1 3d8e276e37e99989fd9b39f668eba0c3cbe180bb SHA256 39ecd5d2557ffccba4d1ccbfb7f17a245565d33e7f2769c6a7a0b1e3a4a51f6e
-EBUILD kadu-account_management-0.6.5.ebuild 161 RMD160 bc8a58a3a09d0b0ba946e9aad8127599cf82b8e8 SHA1 6d280d327fc0e878aaa42042f8cfd527a9c117e0 SHA256 d13c7efc6698f9d3c77e9a3f206f757d66bc6eab289e1a37c19a2b0359dc8473
-MISC ChangeLog 1004 RMD160 c96319dd27c285c7f4ba0fb6e109b8f9ef4435be SHA1 aa423a549647e68974c9736a5f202c725fc83f4b SHA256 d2ece08ec550be6ea5149ed57f973ef011fb2a6427c93668f405d5ab5cb9c317
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-account_management-0.6.0.3.ebuild 333 RMD160 e3397d92aaa9613489275fba5f79bc4edd68f3b7 SHA1 5424b1adf4e93ce0c82b57f0f9231d186d68d9f8 SHA256 52bbade5a60aaca1f9d43e025353c931edcff8a692f61643abbfacca09506a83
+EBUILD kadu-account_management-0.6.5.1.ebuild 255 RMD160 b6fe99b58ad41a64e5b72bc23a68dbc8713e5ba3 SHA1 5f759e6f6ad113e85e9baca25cd16238c6dd2ae2 SHA256 e0a6ad52c460f7f2b2457fe9d155ce2be13dc46a20eedc6e5dc6e0ec1924e907
+MISC ChangeLog 1251 RMD160 33b50ad848549ce3e0f1ca07dc07e19fa02cc4a6 SHA1 d6abd1fd99495c9dae859927734f6d2fc8461c62 SHA256 25011931ffd80c43aa233a3660b1731d241d2e730382dd6a8545d57ed135680d
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
