@@ -1,6 +1,11 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
 inherit kadu-module
 
 SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
 DESCRIPTION="Vital Kadu module that contains account related stuff"
 HOMEPAGE="http://kadu.net"
 KEYWORDS="amd64 x86"
+IUSE=""
